fix the visibility bug go rest elements by adding .ghost class

--- a/src/styles/style1.4.css
+++ b/src/styles/style1.4.css
@@ -147,3 +147,8 @@ div.upperMenu1-4 img{
     margin-left: 20px;
     margin-bottom: 20px;
 }
+
+.ghost{
+    display: none;
+    visibility: hidden;
+}
